# SE_selfmade_review

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/command_device/: CMakeLists.txt  command_device.cpp  command_device.hpp  def_event.hpp
lib/command_device/event_device/: CMakeLists.txt  event_device.cpp  event_device.hpp
lib/command_device/event_device/event/: CMakeLists.txt  event.cpp  event.hpp
lib/command_device/exit_event/: CMakeLists.txt  exit_event.cpp  exit_event.hpp
lib/command_device/ping_event/: CMakeLists.txt  ping_event.cpp  ping_event.hpp
lib/game/: CMakeLists.txt  game.cpp  game.hpp
lib/game/config_validator/: CMakeLists.txt  config_validator.cpp  config_validator.hpp
lib/game/config_validator/line_validator/: CMakeLists.txt  line_validator.cpp  line_validator.hpp
lib/game/game_config/: CMakeLists.txt  game_config.cpp  game_config.hpp
lib/game/game_device/: CMakeLists.txt  game_device.cpp  game_device.hpp
lib/game/game_events/: CMakeLists.txt  game_events.hpp
lib/game/game_events/create_event/: CMakeLists.txt  create_event.cpp  create_event.hpp
lib/game/game_events/dump_event/: CMakeLists.txt  dump_event.cpp  dump_event.hpp
lib/game/game_events/finished_event/: CMakeLists.txt  finished_event.cpp  finished_event.hpp
lib/game/game_events/get_events/: CMakeLists.txt  get_base.hpp  get_events.hpp
lib/game/game_events/get_events/get_count_event/: CMakeLists.txt  get_count_event.cpp  get_count_event.hpp
lib/game/game_events/get_events/get_height_event/: CMakeLists.txt  get_height_event.cpp  get_height_event.hpp
lib/game/game_events/get_events/get_width_event/: CMakeLists.txt  get_width_event.cpp  get_width_event.hpp
lib/game/game_events/load_event/: CMakeLists.txt  load_event.cpp  load_event.hpp
lib/game/game_events/lose_event/: CMakeLists.txt  lose_event.cpp  lose_event.hpp
lib/game/game_events/set_events/: CMakeLists.txt  set_base.hpp  set_events.hpp
lib/game/game_events/set_events/set_count_event/: CMakeLists.txt  set_count_event.cpp  set_count_event.hpp
lib/game/game_events/set_events/set_height_event/: CMakeLists.txt  set_height_event.cpp  set_height_event.hpp
lib/game/game_events/set_events/set_result_event/: CMakeLists.txt  set_result_event.cpp  set_result_event.hpp
lib/game/game_events/set_events/set_strategy_event/: CMakeLists.txt  set_strategy_event.cpp  set_strategy_event.hpp
lib/game/game_events/set_events/set_width_event/: CMakeLists.txt  set_width_event.cpp  set_width_event.hpp
lib/game/game_events/shot_event/: CMakeLists.txt  shot_event.cpp  shot_event.hpp
lib/game/game_events/start_event/: CMakeLists.txt  start_event.cpp  start_event.hpp
lib/game/game_events/stop_event/: CMakeLists.txt  stop_event.cpp  stop_event.hpp
lib/game/game_events/win_event/: CMakeLists.txt  win_event.cpp  win_event.hpp
lib/game/game_resource/: CMakeLists.txt
lib/game/game_resource/ship/: CMakeLists.txt  ship.cpp  ship.hpp  ship_test.cpp
lib/game/game_resource/ship_coordinates/: CMakeLists.txt  ship_coordinates.cpp  ship_coordinates.hpp  ship_coordinates_test.cpp
lib/game/game_resource/shot/: shot.hpp
lib/game/game_strategies/: CMakeLists.txt
lib/game/game_strategies/config_strategy/: CMakeLists.txt  config_strategy.cpp  config_strategy.hpp
lib/game/game_strategies/shot_strategy/: CMakeLists.txt  shot_strategy.cpp  shot_strategy.hpp
lib/game/game_strategies/shot_strategy/chess_order_shot_strategy/: CMakeLists.txt  chess_order_shot_strategy.cpp  chess_order_shot_strategy.hpp
lib/game/game_strategies/shot_strategy/circle_shot_strategy/: CMakeLists.txt  circle_shot_strategy.cpp  circle_shot_strategy.hpp
lib/game/game_strategies/shot_strategy/order_shot_strategy/: CMakeLists.txt  order_shot_strategy.cpp  order_shot_strategy.hpp
lib/input_device/: CMakeLists.txt  input_device.cpp  input_device.hpp
lib/utility/: CMakeLists.txt
lib/utility/container/: CMakeLists.txt
lib/utility/container/lsm_container/: CMakeLists.txt  lsm_container.hpp  lsm_container_test.cpp
lib/utility/time_device/: CMakeLists.txt
lib/utility/time_device/unique_name_generator/: CMakeLists.txt  unique_name_generator.cpp  unique_name_generator.hpp  unique_name_generator_test.cpp
