add_subdirectory(create_event)
add_subdirectory(set_events)
add_subdirectory(get_events)
add_subdirectory(dump_event)
add_subdirectory(load_event)
add_subdirectory(start_event)
add_subdirectory(shot_event)
add_subdirectory(finished_event)
add_subdirectory(win_event)
add_subdirectory(lose_event)
add_subdirectory(stop_event)